# slurm-afternotok-impl

./: .gitignore  README.md  clean-slurm.sh  escalation-config.yaml  escalation-target.yaml  mem-escalate-handler.sh  mem-escalate-lib.py  mem-escalate-success.sh  mem-escalate.sh  pyproject.toml
docker/: .gitignore  README.md  build.sh  docker-compose.yml  docker-entrypoint.sh  escalation-target.yaml  slurm.conf
docker/overlays/: Dockerfile  docker-compose.yml
docker/overlays/config/25.05/: slurm.conf
tests/: compress_indices_test.sh  docker-escalation.yaml  docker-job.sh  docker-stress-job.sh  docker-stress-scenarios.sh  species-demo-python.sh  species-demo-r.sh  species-demo.R  species-demo.py  species-scenarios.sh  test-afterany-batching.sh  test-afterany-short.sh  test-compression.sh  test-scenarios.sh  variable-job.sh
